--- a/Independent Component Analysis/Independent Component Analysis.tex
+++ b/Independent Component Analysis/Independent Component Analysis.tex
@@ -158,6 +158,14 @@ It is easy to see why the above equation holds. To find $P(Z=z)$, one has to sum
 	           & = \int P(X=z-y,\ Y=y) dy 
 \end{align*}
 
+Random variable sums are commutative and associative.
+
+\begin{align*}
+	X + Y     & = Y + Z       \\
+	X + Y + Z & = (X + Y) + Z \\
+	          & = X + (Y + Z) 
+\end{align*}
+
 The expectation of a sum of two random variables is the sum of expectations of individual random variables.
 
 \begin{align*}
@@ -175,6 +183,228 @@ Interestingly, If $X$ and $Y$ are independent Gaussian random variables then the
 	Var(X+Y) & = Var(X) + Var(Y) 
 \end{align*}
 
-\section{ICA Motivation}
+\section{Motivation}
+
+Suppose there are $N$ people speaking at a party and there are $N$ microphones placed at different locations recording sound. Each microphone is recording a simultaneous mix of all speakers' sounds depending on the relative position of the microphone from the speakers. Looking at the microphone recordings alone, is it possible to decipher what each speaker said? 
+
+\section{Problem Statement}
+
+Denote each speaker's sound as a random variable $S_i$ (S stands for signal). A square mixing matrix $A$ is assumed to be responsible for linearly transforming $N$ signals into another set of $N$ random variables observed one each by a microphone.  
+
+\begin{align*}
+	\begin{pmatrix} 
+	X_1 \\ 
+	X_2 \\ 
+	. \\ 
+	. \\ 
+	. \\ 
+	X_N 
+	\end{pmatrix} &=
+	\begin{pmatrix} 
+	a_{11} & a_{12} & ... & a_{1N} \\ 
+	a_{21} & a_{22} & ... & a_{2N} \\ 
+	.      & .      & ... & .      \\
+	.      & .      & ... & .      \\
+	.      & .      & ... & .      \\ 
+	a_{N1} & a_{N2} & ... & a_{NN} \\ 
+	\end{pmatrix}
+	\begin{pmatrix} 
+	S_1 \\ 
+	S_2 \\ 
+	. \\ 
+	. \\ 
+	. \\ 
+	S_N 
+	\end{pmatrix} \\
+	\\
+	\boldsymbol{X} &= A \boldsymbol{S}
+\end{align*}
+
+If the $j$th column of the matrix $A$ is denoted by $\boldsymbol{a_j}$, then the equation becomes
+
+\begin{align*}
+	\boldsymbol{X} = \sum_j \boldsymbol{a_j} S_j 
+\end{align*}
+
+A set of observations corresponding to $\boldsymbol{X}$ are given and the goal is to recover $\boldsymbol{S}$.
+
+\begin{align*}
+	\boldsymbol{X} & = A \boldsymbol{S}      \\
+	\boldsymbol{S} & = A^{-1} \boldsymbol{X} \\
+	\boldsymbol{S} & = W \boldsymbol{X}      
+\end{align*}
+
+The goal is to find this un-mixing matrix $W$.
+
+\section{Assumptions}
+
+\begin{itemize}
+	\item The signals to be recovered must be mutually independent. This assumption gives basis to any ICA algorithm. Find a linear combination $W$ of the observed random variables to yield ``signal" random variables that are as independent as possible.
+	\item The signals must be non-Gaussian. The reason for this restriction will be explained later.
+	\item The signals have zero expectation. This is for mathematical convenience. The observed random variables can be centered to impose this restriction. How?
+	      \begin{align*}
+	      	if\  E(X_i)  & = 0\ \forall\  i       \\
+	      	then\ E(S_i) & = E(\sum_j w_{ij}S_j)  \\
+	      	             & =  \sum_j w_{ij}E(S_j) \\
+	      	             & = 0\ \forall \ i       
+	      \end{align*}
+	        
+\end{itemize}
+
+\section{Ambiguities}
+
+\begin{itemize}
+	\item Variances of the signals can't be calculated.
+	      \begin{align*}
+	      	\begin{pmatrix} 
+	      	X_1 \\ 
+	      	X_2 
+	      	\end{pmatrix} & = 
+	      	\begin{pmatrix} 
+	      	2             & 3 \\ 
+	      	4             & 5 
+	      	\end{pmatrix}
+	      	\begin{pmatrix} 
+	      	S_1 \\ 
+	      	S_2
+	      	\end{pmatrix} \\
+	      	              & = 
+	      	\begin{pmatrix} 
+	      	1             & 3 \\ 
+	      	2             & 5 
+	      	\end{pmatrix}
+	      	\begin{pmatrix} 
+	      	2S_1 \\ 
+	      	S_2
+	      	\end{pmatrix} 
+	      \end{align*}
+	      
+	        
+	\item The order of signals can't be recovered.
+	       
+	      \begin{align*}
+	      	\begin{pmatrix} 
+	      	X_1 \\ 
+	      	X_2 
+	      	\end{pmatrix} & = 
+	      	\begin{pmatrix} 
+	      	2             & 3 \\ 
+	      	4             & 5 
+	      	\end{pmatrix}
+	      	\begin{pmatrix} 
+	      	S_1 \\ 
+	      	S_2
+	      	\end{pmatrix} \\
+	      	              & = 
+	      	\begin{pmatrix} 
+	      	3             & 2 \\ 
+	      	5             & 4 
+	      	\end{pmatrix}
+	      	\begin{pmatrix} 
+	      	S_2 \\ 
+	      	S_1
+	      	\end{pmatrix} 
+	      \end{align*}
+\end{itemize}
+
+\section{Example}
+
+Let $S_1$ and $S_2$ be two independent signals with a uniform density of $1/2$ from $-1$ to $1$. The PDF of each signal looks like
+
+\begin{figure}[htbp]
+	\centering
+	\begin{tikzpicture}
+										    
+		\draw[-latex] (-4,0) -- (4,0) node[right]{$s$};
+		\draw[-latex] (0,-2) -- (0,2) node[above]{$P(S=s)$};
+											
+		\draw[line width=0.15em] (-3.8,0) -- (-2,0);
+		\draw[line width=0.15em] (-2,0) -- (-2,1);
+		\draw[line width=0.15em] (-2,1) -- (2,1);
+		\draw[line width=0.15em] (2,1) -- (2,0);
+		\draw[line width=0.15em] (2,0) -- (3.8,0);		
+			
+								
+		\draw (-2, 1) node [above left] {(-1, 1/2)};
+		\draw (2, 1) node [above right] {(1, 1/2)};
+		
+	\end{tikzpicture}
+\end{figure}
+
+Their joint distribution takes the the following form.
+
+\begin{align*}
+	P(S_1=s_1,\ S_2=s_2) & = \frac{1}{4}\ \ \ if\ |s_1| <= 1\ and\ |s_2| <= 1 \\
+	                     & = 0\ \ \ otherwise                                 
+\end{align*}
+
+\begin{figure}[htbp]
+	\centering
+	\begin{tikzpicture}
+										    
+		\draw[-latex] (-4,0) -- (4,0) node[right]{$s_1$};
+		\draw[-latex] (0,-4) -- (0,4) node[above]{$s_2$};
+											
+		\draw [fill=gray, opacity=0.3] (-2,-2) rectangle (2,2);
+				
+		\draw (-2, -2) node [below left] {(-1, -1)};
+		\draw (-2, 2) node [above left] {(-1, 1)};
+		\draw (2, -2) node [below right] {(1, -1)};
+		\draw (2, 2) node [above right] {(1, 1)};
+	\end{tikzpicture}
+\end{figure}
+
+\FloatBarrier
+
+Consider the following linear transformation of these signals.
+
+\begin{align*}
+	\begin{pmatrix} 
+	X_1 \\ 
+	X_2 
+	\end{pmatrix} & = 
+	\begin{pmatrix} 
+	1             & 1 \\ 
+	1             & 2 
+	\end{pmatrix}
+	\begin{pmatrix} 
+	S_1 \\ 
+	S_2
+	\end{pmatrix}
+\end{align*}
+
+The joint density of the observed signals becomes
+
+\begin{align*}
+	P(X_1=x_1,\ X_2=x_2) & = \frac{1}{2\sqrt{5}}\ \ \ if\ (x_1, x_2)\ lie\ in\  parallelogram\ below \\
+	                     & = 0\ \ \ otherwise                                                        
+\end{align*}
+
+
+\begin{figure}[htbp]
+	\centering
+	\begin{tikzpicture}
+										    
+		\draw[-latex] (-4,0) -- (4,0) node[right]{$x_1$};
+		\draw[-latex] (0,-4) -- (0,4) node[above]{$x_2$};
+											
+		\draw [fill=gray,  opacity=0.3] (2,3) -- (0,1) -- (-2,-3) -- (0,-1) -- cycle;
+				
+		\draw (2, 3) node [above right] {(2, 3)};
+		\draw (0, 1) node [above left] {(0, 1)};
+		\draw (-2, -3) node [below left] {(-2, -3)};
+		\draw (0, -1) node [below right] {(0, -1)};
+	\end{tikzpicture}
+\end{figure}
+
+\FloatBarrier
+
+One edge of the parallelogram points in the direction $(1, 1)$ and the other in $(1, 2)$. These are the same as the rows in the mixing matrix. This gives some hope that ICA could exploit some properties of the joint distribution to recover the original signals like in this case where the edges of the joint density give the mixing matrix away. 
+
+\section{Why Gaussian signals can't be recovered?}
+
+\section{Algorithm}
+
+\section{Comments}
 
 \end{document}
