--- a/Independent Component Analysis/Independent Component Analysis.tex
+++ b/Independent Component Analysis/Independent Component Analysis.tex
@@ -248,7 +248,7 @@ The goal is to find this un-mixing matrix $W$.
 	      	             & =  \sum_j w_{ij}E(S_j) \\
 	      	             & = 0\ \forall \ i       
 	      \end{align*}
-	        
+	      	        
 \end{itemize}
 
 \section{Ambiguities}
@@ -278,10 +278,10 @@ The goal is to find this un-mixing matrix $W$.
 	      	S_2
 	      	\end{pmatrix} 
 	      \end{align*}
-	      
-	        
+	      	      
+	      Hence the variances of all signals are assumed to be equal to unity.       
 	\item The order of signals can't be recovered.
-	       
+	      	       
 	      \begin{align*}
 	      	\begin{pmatrix} 
 	      	X_1 \\ 
@@ -314,20 +314,20 @@ Let $S_1$ and $S_2$ be two independent signals with a uniform density of $1/2$ f
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-										    
+												    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$s$};
 		\draw[-latex] (0,-2) -- (0,2) node[above]{$P(S=s)$};
-											
+													
 		\draw[line width=0.15em] (-3.8,0) -- (-2,0);
 		\draw[line width=0.15em] (-2,0) -- (-2,1);
 		\draw[line width=0.15em] (-2,1) -- (2,1);
 		\draw[line width=0.15em] (2,1) -- (2,0);
 		\draw[line width=0.15em] (2,0) -- (3.8,0);		
-			
-								
+					
+										
 		\draw (-2, 1) node [above left] {(-1, 1/2)};
 		\draw (2, 1) node [above right] {(1, 1/2)};
-		
+				
 	\end{tikzpicture}
 \end{figure}
 
@@ -341,12 +341,12 @@ Their joint distribution takes the the following form.
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-										    
+												    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$s_1$};
 		\draw[-latex] (0,-4) -- (0,4) node[above]{$s_2$};
-											
+													
 		\draw [fill=gray, opacity=0.3] (-2,-2) rectangle (2,2);
-				
+						
 		\draw (-2, -2) node [below left] {(-1, -1)};
 		\draw (-2, 2) node [above left] {(-1, 1)};
 		\draw (2, -2) node [below right] {(1, -1)};
@@ -384,12 +384,12 @@ The joint density of the observed signals becomes
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-										    
+												    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$x_1$};
 		\draw[-latex] (0,-4) -- (0,4) node[above]{$x_2$};
-											
+													
 		\draw [fill=gray,  opacity=0.3] (2,3) -- (0,1) -- (-2,-3) -- (0,-1) -- cycle;
-				
+						
 		\draw (2, 3) node [above right] {(2, 3)};
 		\draw (0, 1) node [above left] {(0, 1)};
 		\draw (-2, -3) node [below left] {(-2, -3)};
@@ -400,6 +400,47 @@ The joint density of the observed signals becomes
 \FloatBarrier
 
 One edge of the parallelogram points in the direction $(1, 1)$ and the other in $(1, 2)$. These are the same as the rows in the mixing matrix. This gives some hope that ICA could exploit some properties of the joint distribution to recover the original signals like in this case where the edges of the joint density give the mixing matrix away. 
+
+\section{Relation to PCA}
+
+Given a centered random vector $\boldsymbol{X}$, PCA defines a linear transform $\boldsymbol{Y}\ =\ P \boldsymbol{X}$ such that the resulting vector has uncorrelated components. $P$ is a matrix of orthonormal eigenvectors of the covariance matrix of $\boldsymbol{X}$.
+
+\begin{align*}
+	E(\boldsymbol{XX^T}) & = P^TDP 
+\end{align*}
+
+The covariance matrix of the transformed random vector is diagonalized.
+
+\begin{align*}
+	E(\boldsymbol{YY^T}) & = E(P\boldsymbol{XX^T}P^T) \\
+	                     & = PE(\boldsymbol{XX^T})P^T \\
+	                     & = PP^TDPP^T                \\
+	                     & = D                        
+\end{align*}
+
+One can go a step further to define $\boldsymbol{Y}\ =\ D^{-1/2}P\boldsymbol{X}$. Now the covariance matrix of the transformed random vector becomes identity.
+
+\begin{align*}
+	E(\boldsymbol{YY^T}) & = D^{-1/2}PE(\boldsymbol{XX^T})P^TD^{-1/2T} \\
+	                     & = D^{-1/2}PP^TDPP^TD^{-1/2T}                \\
+	                     & = I                                         
+\end{align*}
+
+Such a transformation of $\boldsymbol{X}$ is called whitening. Whitening is often a preprocessing step of ICA. Intuitively, whitening makes the transformed components uncorrelated and then ICA will make them independent. So whitening solves half the problem of ICA. More formally, whitening restricts the space of mixing matrix to orthogonal matrices thus making the problem easier. To understand why, consider $\boldsymbol{Y}\ =\  A\boldsymbol{S}$ such that $\boldsymbol{Y}$ is white.
+
+\begin{align*}
+	E(\boldsymbol{YY^T}) = I      \\
+	AE(\boldsymbol{SS^T}) A^T = I \\
+\end{align*}
+
+Since signals are independent with unit variances as per an assumption above,
+
+\begin{align*}
+	E(\boldsymbol{SS^T}) & = I \\
+	AA^T                 & = I \\
+\end{align*}
+
+proving that $A$ must be orthogonal. Hence, in case of a random vector of size $N$, instead of estimating $N^2$ parameters of the matrix $A$, ICA only has to estimate $N(N-1)/2$ parameters since $A$ is orthogonal and an orthogonal matrix has $N(N-1)/2$ degrees of freedom. This is equal to estimating almost half the parameters. Thus, literally too, whitening solves half the problem of ICA.
 
 \section{Why Gaussian signals can't be recovered?}
 
