--- a/Independent Component Analysis/Independent Component Analysis.tex
+++ b/Independent Component Analysis/Independent Component Analysis.tex
@@ -248,7 +248,7 @@ The goal is to find this un-mixing matrix $W$.
 	      	             & =  \sum_j w_{ij}E(S_j) \\
 	      	             & = 0\ \forall \ i       
 	      \end{align*}
-	      	        
+	      	      	        
 \end{itemize}
 
 \section{Ambiguities}
@@ -278,10 +278,10 @@ The goal is to find this un-mixing matrix $W$.
 	      	S_2
 	      	\end{pmatrix} 
 	      \end{align*}
-	      	      
+	      	      	      
 	      Hence the variances of all signals are assumed to be equal to unity.       
 	\item The order of signals can't be recovered.
-	      	       
+	      	      	       
 	      \begin{align*}
 	      	\begin{pmatrix} 
 	      	X_1 \\ 
@@ -314,20 +314,20 @@ Let $S_1$ and $S_2$ be two independent signals with a uniform density of $1/2$ f
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-												    
+														    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$s$};
 		\draw[-latex] (0,-2) -- (0,2) node[above]{$P(S=s)$};
-													
+															
 		\draw[line width=0.15em] (-3.8,0) -- (-2,0);
 		\draw[line width=0.15em] (-2,0) -- (-2,1);
 		\draw[line width=0.15em] (-2,1) -- (2,1);
 		\draw[line width=0.15em] (2,1) -- (2,0);
 		\draw[line width=0.15em] (2,0) -- (3.8,0);		
-					
-										
+							
+												
 		\draw (-2, 1) node [above left] {(-1, 1/2)};
 		\draw (2, 1) node [above right] {(1, 1/2)};
-				
+						
 	\end{tikzpicture}
 \end{figure}
 
@@ -341,12 +341,12 @@ Their joint distribution takes the the following form.
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-												    
+														    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$s_1$};
 		\draw[-latex] (0,-4) -- (0,4) node[above]{$s_2$};
-													
+															
 		\draw [fill=gray, opacity=0.3] (-2,-2) rectangle (2,2);
-						
+								
 		\draw (-2, -2) node [below left] {(-1, -1)};
 		\draw (-2, 2) node [above left] {(-1, 1)};
 		\draw (2, -2) node [below right] {(1, -1)};
@@ -384,12 +384,12 @@ The joint density of the observed signals becomes
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-												    
+														    
 		\draw[-latex] (-4,0) -- (4,0) node[right]{$x_1$};
 		\draw[-latex] (0,-4) -- (0,4) node[above]{$x_2$};
-													
+															
 		\draw [fill=gray,  opacity=0.3] (2,3) -- (0,1) -- (-2,-3) -- (0,-1) -- cycle;
-						
+								
 		\draw (2, 3) node [above right] {(2, 3)};
 		\draw (0, 1) node [above left] {(0, 1)};
 		\draw (-2, -3) node [below left] {(-2, -3)};
@@ -443,6 +443,73 @@ Since signals are independent with unit variances as per an assumption above,
 proving that $A$ must be orthogonal. Hence, in case of a random vector of size $N$, instead of estimating $N^2$ parameters of the matrix $A$, ICA only has to estimate $N(N-1)/2$ parameters since $A$ is orthogonal and an orthogonal matrix has $N(N-1)/2$ degrees of freedom. This is equal to estimating almost half the parameters. Thus, literally too, whitening solves half the problem of ICA.
 
 \section{Why Gaussian signals can't be recovered?}
+
+Consider a Gaussian random variable,
+
+\begin{align*}
+	P(X=x) & = \frac{1}{\sqrt{2\pi\sigma^2}} e^{\frac{-(x-\mu)^2}{2\sigma^2}} \\
+\end{align*}
+
+Consider another random variable $Y=\alpha X$. What does the PDF of $Y$ look like? One can proceed in the following manner.
+
+\begin{align*}
+	P(Y=y) & = P(\alpha X=y)                                                                 \\
+	       & = P(X=\frac{y}{\alpha})                                                         \\
+	       & = \frac{1}{\sqrt{2\pi\sigma^2}} e^{\frac{-(\frac{y}{\alpha}-\mu)^2}{2\sigma^2}} 
+\end{align*} 
+
+However, this is incorrect as as area under the PDF must equal to unity and for that to happen a division by $\alpha$ is necessary.
+
+\begin{align*}
+	P(Y=y) & = \frac{1}{\alpha \sqrt{2\pi\sigma^2}} e^{\frac{-(\frac{y}{\alpha}-\mu)^2}{2\sigma^2}}       \\
+	       & = \frac{1}{\sqrt{2\pi \alpha^2 \sigma^2}} e^{\frac{-(y- \alpha \mu)^2}{2 \alpha^2 \sigma^2}} 
+\end{align*}
+
+It is clear that $Y$ is also Gaussian with mean $\alpha \mu$ and variance $\alpha^2 \sigma^2$. Another well known result with respect to Gaussians is that sum of two Gaussians is also a Gaussian with mean as sum of individual means and variance as sum of individual variances.
+
+\begin{align*}
+	\mathcal{N}(\mu_1, \sigma_1^2) + \mathcal{N}(\mu_2, \sigma_2^2) \sim \mathcal{N}(\mu_1 + \mu_2, \sigma_1^2 + \sigma_2^2) 
+\end{align*}
+
+These properties of Gaussian signals make them unrecoverable. Consider two Gaussian signals of zero mean and unit variance as per ICA assumptions and an orthogonal mixing matrix. An orthogonal matrix is considered because it is assumed that whitening has already been done and thus the search space of ICA is only orthogonal matrices.
+
+\begin{align*} 
+	\begin{pmatrix} 
+	a & b                 \\ 
+	c & d                 
+	\end{pmatrix}
+	\begin{pmatrix} 
+	\mathcal{N}(0, 1) \\ 
+	\mathcal{N}(0, 1) 
+	\end{pmatrix} \\
+	  & = \begin{pmatrix} 
+	\mathcal{N}(0, a^2) + \mathcal{N}(0, b^2) \\ 
+	\mathcal{N}(0, c^2) + \mathcal{N}(0, d^2)
+	\end{pmatrix}  \\
+	  & = \begin{pmatrix} 
+	\mathcal{N}(0, a^2+b^2)  \\ 
+	\mathcal{N}(0, c^2 + d^2)
+	\end{pmatrix}
+\end{align*}
+
+Due to orthogonality of the mixing matrix $a^2+b^2=c^2+d^2=1$.
+
+\begin{align*}
+	\begin{pmatrix} 
+	a & b                 \\ 
+	c & d                 
+	\end{pmatrix}
+	\begin{pmatrix} 
+	\mathcal{N}(0, 1) \\ 
+	\mathcal{N}(0, 1) 
+	\end{pmatrix} 
+	  & = \begin{pmatrix} 
+	\mathcal{N}(0, 1) \\ 
+	\mathcal{N}(0, 1) 
+	\end{pmatrix} 
+\end{align*}
+
+So, upon the transformation due to any orthogonal matrix the signals remain unchanged. Hence, in case of Gaussian signals only whitening is possible. 
 
 \section{Algorithm}
 
